SLI-1518 Remove finding streaming